# didactic-octo-kumquat

./: CMakeLists.txt
cmake/: FindAssImp.cmake
include/: GL.h  cleanup.h  res_path.h
include/cameras/: Camera.h
include/components/: Component.h  FPSCamera.h
include/core/: Controller.h  Geometry.h  Object3D.h  SDLEventController.h  Window.h
include/display/: Quad.h
include/events/: sdl_events.h
include/input/: Input.h
include/loaders/: obj.h
include/materials/: Material.h
include/objects/: Mesh.h
include/renderers/opengl/: GLRenderer.h  GLState.h  GLUniform.h  Program.h  Shader.h
include/renderers/ui/: UIRenderer.h
include/scenes/: Scene.h
include/signals/: Signal.h
include/textures/: Texture.h
include/tweens/: Tween.h
include/tweens/easing/: Linear.h  Symmetric.h
include/utils/: File.h
res/glsl/: quad.fs  quad.vs  test.fs  test.vs  texture.fs  texture.vs
src/: main.cpp  res_path.cpp
src/cameras/: Camera.cpp
src/components/: FPSCamera.cpp
src/core/: Geometry.cpp  Object3D.cpp  SDLEventController.cpp  Window.cpp
src/display/: Quad.cpp
src/input/: Input.cpp
src/loaders/: obj.cpp
src/materials/: Material.cpp
src/objects/: Mesh.cpp
src/renderers/opengl/: GLRenderer.cpp  GLState.cpp  GLUnifom.cpp  Program.cpp  Shader.cpp
src/renderers/ui/: UIRenderer.cpp
src/scenes/: Scene.cpp
src/textures/: Texture.cpp
src/tweens/: Tween.cpp
src/tweens/easing/: Linear.cpp
src/utils/: File.cpp
